--- a/css/admin_css/style_msgBox.css
+++ b/css/admin_css/style_msgBox.css
@@ -697,17 +697,21 @@ nav img.user-profile {
 
 .ccheader {
     position: relative;
-    z-index: -2;
-    padding: 2px 2px;
-    font-size: 24px;
+    z-index: -1;
+    padding: 1px 1px;
     background: #124254;
-    font-weight: 400;
     color: #ffc423;
     width: 100%;
     text-align: center;
     font-family: 'Roboto-regular', sans-serif;
     letter-spacing: 6px;
     text-transform: uppercase;
+}
+
+.ccheader-txt {
+    font-size: 24px;
+    margin-top: 1%;
+    margin-bottom: 1%;
 }
 
 
