--- a/css/admin_css/style_studAcc.css
+++ b/css/admin_css/style_studAcc.css
@@ -326,11 +326,9 @@ nav h5 {
 
 .cheader {
     position: relative;
-    z-index: -2;
-    padding: 2px 2px;
-    font-size: 24px;
+    z-index: -1;
+    padding: 1px 1px;
     background: #124254;
-    font-weight: 400;
     color: #ffc423;
     width: 100%;
     text-align: center;
@@ -339,19 +337,29 @@ nav h5 {
     text-transform: uppercase;
 }
 
+.cheader-txt {
+    font-size: 24px;
+    margin-top: 1%;
+    margin-bottom: 1%;
+}
+
 .bheader {
     position: relative;
-    z-index: -2;
-    padding: 2px 2px;
-    font-size: 24px;
+    z-index: -1;
+    padding: 1px 1px;
     background: #124254;
-    font-weight: 400;
     color: #ffc423;
     width: 100%;
     text-align: center;
     font-family: 'Roboto-regular', sans-serif;
     letter-spacing: 6px;
     text-transform: uppercase;
+}
+
+.bheader-txt {
+    font-size: 24px;
+    margin-top: 1%;
+    margin-bottom: 1%;
 }
 
 .pagination>li {
@@ -444,11 +452,7 @@ iframe {
     border-bottom: 2px solid #fece4b;
     padding: 10px 20px;
     margin: 30px 5px 15px 0px!important;
-    box-shadow:
-    inset 0 0 2px 0 rgba(255,255,255,.4),
-    inset 0 0 3px 0 rgba(255, 255, 255, 0.8),
-    inset 0 0 3px 5px rgba(255, 255, 255, 0.07),
-    2px 2px 4px 0 rgba(0,0,0,.25);
+    box-shadow: inset 0 0 2px 0 rgba(255, 255, 255, .4), inset 0 0 3px 0 rgba(255, 255, 255, 0.8), inset 0 0 3px 5px rgba(255, 255, 255, 0.07), 2px 2px 4px 0 rgba(0, 0, 0, .25);
     border-radius: 4px;
 }
 
@@ -475,11 +479,7 @@ iframe {
     border-bottom: 2px solid #fece4b;
     padding: 10px 20px;
     margin: 30px 5px 15px 0px!important;
-    box-shadow:
-    inset 0 0 2px 0 rgba(255,255,255,.4),
-    inset 0 0 3px 0 rgba(255, 255, 255, 0.8),
-    inset 0 0 3px 5px rgba(255, 255, 255, 0.07),
-    2px 2px 4px 0 rgba(0,0,0,.25);
+    box-shadow: inset 0 0 2px 0 rgba(255, 255, 255, .4), inset 0 0 3px 0 rgba(255, 255, 255, 0.8), inset 0 0 3px 5px rgba(255, 255, 255, 0.07), 2px 2px 4px 0 rgba(0, 0, 0, .25);
     border-radius: 4px;
 }
 
@@ -506,11 +506,7 @@ iframe {
     border-bottom: 2px solid #fece4b;
     padding: 10px 20px;
     margin: 30px 5px 15px 0px!important;
-    box-shadow:
-    inset 0 0 2px 0 rgba(255,255,255,.4),
-    inset 0 0 3px 0 rgba(255, 255, 255, 0.8),
-    inset 0 0 3px 5px rgba(255, 255, 255, 0.07),
-    2px 2px 4px 0 rgba(0,0,0,.25);
+    box-shadow: inset 0 0 2px 0 rgba(255, 255, 255, .4), inset 0 0 3px 0 rgba(255, 255, 255, 0.8), inset 0 0 3px 5px rgba(255, 255, 255, 0.07), 2px 2px 4px 0 rgba(0, 0, 0, .25);
     border-radius: 4px;
 }
 
@@ -537,11 +533,7 @@ iframe {
     border-bottom: 2px solid #fece4b;
     padding: 10px 20px;
     margin: 30px 5px 15px 0px!important;
-    box-shadow:
-    inset 0 0 2px 0 rgba(255,255,255,.4),
-    inset 0 0 3px 0 rgba(255, 255, 255, 0.8),
-    inset 0 0 3px 5px rgba(255, 255, 255, 0.07),
-    2px 2px 4px 0 rgba(0,0,0,.25);
+    box-shadow: inset 0 0 2px 0 rgba(255, 255, 255, .4), inset 0 0 3px 0 rgba(255, 255, 255, 0.8), inset 0 0 3px 5px rgba(255, 255, 255, 0.07), 2px 2px 4px 0 rgba(0, 0, 0, .25);
     border-radius: 4px;
 }
 
@@ -601,11 +593,7 @@ iframe {
     padding: 10px 20px;
     margin-top: 8px;
     margin-left: 2px!important;
-    box-shadow:
-    inset 0 0 2px 0 rgba(255,255,255,.4),
-    inset 0 0 3px 0 rgba(255, 255, 255, 0.8),
-    inset 0 0 3px 5px rgba(255, 255, 255, 0.07),
-    2px 2px 4px 0 rgba(0,0,0,.25);
+    box-shadow: inset 0 0 2px 0 rgba(255, 255, 255, .4), inset 0 0 3px 0 rgba(255, 255, 255, 0.8), inset 0 0 3px 5px rgba(255, 255, 255, 0.07), 2px 2px 4px 0 rgba(0, 0, 0, .25);
     border-radius: 4px;
 }
 
@@ -619,10 +607,7 @@ iframe {
     border-bottom: 2px solid #fece4b;
     padding: 10px 20px;
     margin: 30px 5px 15px 0px!important;
-    box-shadow: inset 0 0 2px 0 rgba(255,255,255,.4),
-    inset 0 0 3px 0 rgba(255, 255, 255, 0.8),
-    inset 0 0 3px 5px rgba(255, 255, 255, 0.07),
-    2px 2px 4px 0 rgba(0,0,0,.25) !important;
+    box-shadow: inset 0 0 2px 0 rgba(255, 255, 255, .4), inset 0 0 3px 0 rgba(255, 255, 255, 0.8), inset 0 0 3px 5px rgba(255, 255, 255, 0.07), 2px 2px 4px 0 rgba(0, 0, 0, .25) !important;
     border-radius: 9px;
 }
 
@@ -772,10 +757,14 @@ table.center {
 }
 
 thead {
-    border: 1px solid #124254;
+    width: 100%;
     color: #EEEEEE;
     background-color: #18566e;
     text-align: center;
+}
+
+thead input {
+    width: 100%;
 }
 
 tbody {
@@ -783,19 +772,22 @@ tbody {
 }
 
 th {
-    border: 1px solid #124254;
-    color: #EEEEEE;
+    color: #ffffff;
     background-color: #18566e;
     text-align: center;
-    font-size: 10pt!important;
-    letter-spacing: 2px!important;
-    font-weight: 700;
-    padding: 10px;
+    font-size: 10pt;
+    font-family: 'Roboto-regular', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    border: 1px solid #124254 !important;
 }
 
-#tableth {
-    padding: 0.3%!important;
-    padding-right: 15px!important;
+#tableh {
+    padding: 10px!important;
+}
+
+#tableh2 {
+    padding: 6px!important;
 }
 
 td {
