--- a/css/student_css/style_studDash.css
+++ b/css/student_css/style_studDash.css
@@ -176,11 +176,11 @@ aside p.Aelec-guide-txt {
 
 /* Responsive layout - makes the menu and the content (inside the section) sit on top of each other instead of next to each other */
 @media (max-width: 640px) { /*landscape galaxy s5*/
-  body, section, aside, #aside-container, #countdown, div ul {
+  body, section, aside, #aside-container, #acountdown, #AD-CD-contents {
     -webkit-flex-direction: column;
     flex-direction: column;
   }
-  #countdown {
+  #acountdown {
     font-size: auto;
   }
   #ADaside-container{
@@ -188,14 +188,14 @@ aside p.Aelec-guide-txt {
     margin-left: 70px;
     margin-top: -50px;
   }
-  div ul {
+  #AD-CD-contents {
     display: block;
     font-size: auto;
   }
 }
 
 @media only screen and (device-width: 768px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1) { /*ipad portrait*/
-  body, section, aside, #aside-container, #countdown, div ul {
+  body, section, aside, #aside-container, #acountdown, #AD-CD-contents {
     -webkit-flex-direction: column;
     flex-direction: column;
   }
@@ -209,17 +209,17 @@ aside p.Aelec-guide-txt {
     margin-left: 130px;
     margin-top: -50px;
   }
-  #countdown {
+  #acountdown {
     font-size: auto;
   }
-  div ul {
+  #AD-CD-contents {
     display: block;
     font-size: auto;
   }
 }
 
 @media only screen and (device-width: 1024px) and (device-height: 768px) and (orientation:landscape) {  /*ipad landscape*/
-  body, section, aside, #aside-container, #countdown, div ul {
+  body, section, aside, #aside-container, #acountdown, #AD-CD-contents {
     -webkit-flex-direction: column;
     flex-direction: column;
   }
@@ -234,18 +234,18 @@ aside p.Aelec-guide-txt {
     margin-left: 160px;
     max-width: 700px;
   }
-  div ul{
+  #AD-CD-contents{
     display: block;
     font-size: auto;
     font-weight: bold;
   }
-  #countdown {
+  #acountdown {
     font-size: auto;
   }
 }
 
 @media only screen and (device-width: 1024px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1) { /*ipad pro potrait*/
-  body, section, aside, #aside-container, #countdown, div ul {
+  body, section, aside, #aside-container, #acountdown, #AD-CD-contents {
     -webkit-flex-direction: column;
     flex-direction: column;
   }
@@ -258,11 +258,234 @@ aside p.Aelec-guide-txt {
     margin-left: 110px;
     max-width: 800px;
   }
-  #countdown {
+  #acountdown {
     font-size: auto;
   }
-  div ul {
+  #AD-CD-contents {
     display: block;
     font-size: auto;
+  }
+}
+
+/* iPhone 6/7/8+ landscape */
+@media only screen and (min-device-width: 414px)  and (orientation : landscape) and (-webkit-device-pixel-ratio: 3){
+  body, section, aside, #aside-container, #acountdown, #AD-CD-contents {
+    -webkit-flex-direction: column;
+    flex-direction: column;
+  }
+  section{
+    display: flex;
+    margin-left: 20px;
+    margin-top: 100px;
+    float: left;
+  }
+  article{
+    width: 100%;
+  }
+  #acountdown {
+    font-size: auto;
+  }
+  #aside-container{
+    float: left;
+    margin-left: 90px;
+    margin-top: -60px;
+    margin-bottom: 40px;
+    max-width: 646px; /*736px - 90px*/
+    height: 100%;
+  }
+  #AD-CD-contents{
+    display: block;
+    font-size: auto;
+  }
+  .Aelec-guide-txt{
+    margin-bottom: 60px;
+  }
+}
+
+/* ----------- iPhone 5, 5S, 5C and 5SE ----------- */
+/* portrait */
+@media only screen and (device-height: 568px) {
+  body, section, aside, #aside-container, #acountdown, #AD-CD-contents {
+    -webkit-flex-direction: column;
+    flex-direction: column;
+  }
+  section{
+    display: flex;
+    margin-left: 20px;
+    margin-top: 100px;
+    float: left;
+  }
+  article p, article h1 {
+    width: 100%;
+    margin-right: 10px;
+    max-width: 90%;
+  }
+  #acountdown{
+    font-size: auto;
+  }
+  #aside-container{
+    float: left;
+    margin-left: 40px;
+    margin-top: -60px;
+    margin-bottom: 40px;
+    height: 100%;
+    /* transform: translate(-20px, 10px); */
+  }
+  #AD-CD-contents {
+    display: block;
+    font-size: auto;
+  }
+  .Aelec-guide-txt{
+    margin-bottom: 60px;
+  }
+}
+
+/*iphone X landscape*/
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 812px) 
+  and (-webkit-min-device-pixel-ratio: 3)
+  and (orientation: landscape) {
+
+  #aside-container{
+    float: left;
+    margin-left: 60px;
+    margin-top: -60px;
+    margin-bottom: 40px;
+    max-width: 752px; /*812px - 60px*/
+    height: 100%;
+  }
+  #AD-CD-contents {
+    display: block;
+    font-size: auto;
+  }
+  .Aelec-guide-txt{
+    margin-bottom: 60px;
+  }
+}
+
+/* ----------- iPhone 5, 5S, 5C and 5SE ----------- */
+/* portrait */
+@media only screen and (device-height: 568px) {
+  body, section, aside, #aside-container, #acountdown, #AD-CD-contents {
+    -webkit-flex-direction: column;
+    flex-direction: column;
+  }
+  section{
+    display: flex;
+    margin-left: 20px;
+    margin-top: 100px;
+    float: left;
+  }
+  article p, article h1 {
+    width: 100%;
+    margin-right: 10px;
+    max-width: 90%;
+  }
+  #acountdown {
+    font-size: auto;
+  }
+  #aside-container{
+    float: left;
+    margin-left: 40px;
+    margin-top: -60px;
+    margin-bottom: 40px;
+    height: 100%;
+    /* transform: translate(-20px, 10px); */
+  }
+  #AD-CD-contents {
+    display: block;
+    font-size: auto;
+  }
+  .Aelec-guide-txt{
+    margin-bottom: 60px;
+  }
+}
+
+/*iPhone 6/7/8+ portrait for logo container*/
+@media only screen and (min-device-width: 414px)  and (orientation : portrait) and (-webkit-device-pixel-ratio: 3){
+  .Alogo-container{
+    max-width: 240px;
+    margin-right: 10px;
+  }
+  .Alogos{
+    object-fit: scale-down;
+    max-width:100%;
+    max-height:100%;
+  }
+}
+/* iPhone 6/7/8+ landscape */
+@media only screen and (min-device-width: 414px)  and (orientation : landscape) and (-webkit-device-pixel-ratio: 3){
+  body, section, aside, #aside-container, #acountdown, #AD-CD-contents {
+    -webkit-flex-direction: column;
+    flex-direction: column;
+  }
+  section{
+    display: flex;
+    margin-left: 20px;
+    margin-top: 100px;
+    float: left;
+  }
+  article{
+    width: 100%;
+  }
+  #acountdown {
+    font-size: auto;
+  }
+  #aside-container{
+    float: left !important;
+    margin-left: 60px;
+    margin-top: -60px;
+    margin-bottom: 40px;
+    max-width: 676px; /*736px - 60px*/
+    height: 100%;
+  }
+  #AD-CD-contents {
+    display: block;
+    font-size: auto;
+  }
+  .Aelec-guide-txt{
+    margin-bottom: 60px;
+  }
+}
+
+/*iPhone 4 portrait*/
+@media only screen and (device-height: 480px){
+  body, section, #aside-container, #acountdown, #AD-CD-contents {
+    -webkit-flex-direction: column;
+    flex-direction: column;
+  }
+  section{
+    display: flex;
+    margin-left: 20px;
+    margin-top: 100px;
+    float: left;
+  }
+  .Alogos{
+    object-fit: scale-down;
+    max-width: 100%;
+    max-height: 100%;
+  }
+  article{
+    width: 100%;
+    flex-shrink: 2 !important;
+  }
+  #acountdown{
+    font-size: auto;
+  }
+  #aside-container{
+    float: left;
+    margin-left: 40px;
+    margin-top: -60px;
+    margin-bottom: 40px;
+    height: 100%;
+    max-width: 260px;
+  }
+  #AD-CD-contents {
+    display: block;
+    font-size: auto;
+  }
+  .Aelec-guide-txt{
+    margin-bottom: 60px;
   }
 }
