--- a/css/student_css/style_studNav.css
+++ b/css/student_css/style_studNav.css
@@ -53,13 +53,7 @@
 /* Body */
 
 body {
-  background-image: url("../../img/studentBG.png");
-  background-size: cover;
   font-size: 100%;
-  background-attachment: fixed;
-  width: auto;
-  min-height: 100%;
-  margin-bottom: 50px;
   overflow-y: scroll;
 }
 
@@ -128,7 +122,7 @@ h3.aLogo-txt2 {
   margin-top: 0px;
   color: #1b1b1b;
   padding-top: 5px;
-  font-weight: 1000;
+  font-weight: 700;
   font-size: 100%;
   margin-bottom: 0px;
   letter-spacing: 6px;
@@ -326,6 +320,7 @@ nav ul ul ul li {
   }
   nav .aLogo {
     margin-bottom: 3%;
+    margin-left: 15px;
     width: auto;
     float: left;
   }
