--- a/css/style_Login.css
+++ b/css/style_Login.css
@@ -174,6 +174,34 @@ select {
 }
 
 
+
+
+/* iPads (landscape) ----------- */
+@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape) {
+  body{
+    -webkit-flex-direction: column;
+    flex-direction: column;
+  }
+
+  .Awelcome-banner {
+    display: block;
+    float: right;
+    margin: 100px;
+  }
+  .Acontainer{
+    position: relative; /* or absolute */
+    display: inline-block;
+    float: none;
+    max-width: 100%;
+    top: -150px;
+  }
+}
+
+
+
+
+
+
 /* Smartphones (portrait and landscape) ----------- */
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
   body{
@@ -207,23 +235,25 @@ select {
   }
 }
 
-/* iPads (landscape) ----------- */
-@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape) {
+/* Smartphones (landscape) ----------- */
+@media only screen and (min-width : 321px) {
   body{
     -webkit-flex-direction: column;
     flex-direction: column;
   }
 
+
   .Awelcome-banner {
-    display: block;
-    float: right;
-    margin: 100px;
+    float: left;
+    position: relative;
+    margin-left: 10px;
+    margin-top: 180px;
   }
   .Acontainer{
     position: relative; /* or absolute */
     display: inline-block;
-    float: none;
     max-width: 100%;
-    top: -150px;
+    margin: 25px 10px 0 10px;
   }
+
 }
