--- a/css/student_css/styles_folder_monitor.css
+++ b/css/student_css/styles_folder_monitor.css
@@ -1,22 +1,15 @@
 body {
     background-color: rgb(221, 221, 221);
 }
-
 .Barc_container{
     width:80%;
     background-color: white;
 }
-
-.Byear_arc {
+a {
     text-decoration: none;
     font-size: large;
     color: aliceblue;
 }
-
-.Byear_arc :hover, Byear_arc :active {
-    text-decoration: none;
-}
-
 .items {
     text-align: center;
     float: left;
@@ -26,19 +19,16 @@ body {
     color: white;
     text-decoration: none;
 }
-
 .items:hover {
-    background-color: rgb(255, 255, 255, 0.3);
+    background-color: transparent;
     text-decoration: none;
 }
-
 .items figure {
     text-decoration: none;
     background-color: transparent;
     width: 160px;
     height: 180px;
 }
-
 figcaption {
-    color: white;
+    color: #e1a911;
 }
