--- a/css/admin_css/style_adminNav.css
+++ b/css/admin_css/style_adminNav.css
@@ -454,3 +454,78 @@ nav img.user-profile {
   background-position: center center;
   background-size: cover;
 }
+
+/*----iPhone 5/SE----*/
+@media only screen and (device-height: 568px) {
+  h2.aLogo-txt1 {
+    font-size: 70%;
+    font-weight: lighter;
+    margin-top: 2px;
+    font-family: 'Roboto-regular', sans-serif;
+    margin-bottom: 0px;
+    letter-spacing: 6px;
+    text-decoration: none;
+  }
+  
+  h3.aLogo-txt2 {
+    font-size: 70%;
+    font-weight: 200;
+    margin-top: 0px;
+    color: #ffffff;
+    padding-top: 5px;
+    margin-bottom: 2px;
+    letter-spacing: 6px;
+  }
+  
+  h3.aLogo-txt2 a {
+    text-decoration: none;
+    color: #ffffff;
+    font-family: 'genericaregular', sans-serif;
+  }
+
+  .ADicon {
+    transform: translate(10px, -10px);
+  }
+  
+  span.cancel:before {
+    content: '\f00d';
+  }
+}
+
+/*----iPhone 4----*/
+@media only screen and (device-height: 480px){
+  h2.aLogo-txt1 {
+    font-size: 70%;
+    font-weight: lighter;
+    margin-top: 2px;
+    font-family: 'Roboto-regular', sans-serif;
+    margin-bottom: 0px;
+    letter-spacing: 6px;
+    text-decoration: none;
+  }
+  
+  h3.aLogo-txt2 {
+    font-size: 70%;
+    font-weight: 200;
+    margin-top: 0px;
+    color: #ffffff;
+    padding-top: 5px;
+    margin-bottom: 2px;
+    letter-spacing: 6px;
+  }
+  
+  h3.aLogo-txt2 a {
+    text-decoration: none;
+    color: #ffffff;
+    font-family: 'genericaregular', sans-serif;
+  }
+
+  .ADicon {
+    transform: translate(10px, -10px);
+  }
+  
+  span.cancel:before {
+    content: '\f00d';
+  }
+
+}
