--- a/css/admin_css/style_monitor.css
+++ b/css/admin_css/style_monitor.css
@@ -38,7 +38,7 @@ h2.aHeader-txt {
 	grid-template-rows: repeat(autofit, 30%);
 	text-align: center;
 	margin-top: 18px;
-	max-width: 60%;
+	max-width: 80%;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -63,6 +63,9 @@ h2.aHeader-txt {
 	object-fit: cover;
 	text-align: center;
 }
+hr{
+	height: 30px;
+}
 .Bpstn .Bname {
 	margin-top: 10px;
 	color: #e1a911;
@@ -78,13 +81,14 @@ h2.aHeader-txt {
 }
 .Bpstn .Bpstn {
 	margin-top: -10px;
-	color: white;
+	color: #ffffff;
 	font-weight: bold;
-	font-size: 130%;
+	font-size: 150%;
 	border-bottom-color: white;
 	border-bottom-style: solid;
 	border-bottom-width: 90%;
 	text-align: center;
+	padding-bottom: 10px;
 	font-style: italic;
 	font-family: "Roboto-regular", sans-serif;
 }
