--- a/css/student_css/style_monitor.css
+++ b/css/student_css/style_monitor.css
@@ -102,6 +102,7 @@
   border-bottom-style: solid;
   border-bottom-width: 90%;
   padding-bottom: 10px;
+  font-family: 'Roboto-regular', sans-serif;
   font-style: italic;
 }
 .Bpstn .Bplat1 {
