--- a/css/admin_css/style_monitor.css
+++ b/css/admin_css/style_monitor.css
@@ -461,7 +461,7 @@ iframe {
 
 /* Popup Confirm Modal */
 .dlg-container {
-	position: absolute;
+	position: fixed;
 	left: 50%;
 	top: -30%;
 	transform: translateX(-50%) translateY(-50%);
