--- a/css/admin_css/style1_addAdmin.css
+++ b/css/admin_css/style1_addAdmin.css
@@ -483,11 +483,16 @@ div.container.upload {
   border: none;
 }
 
-@media only screen and (max-width: 600px) {
-  div.container {
-    margin: 0px 0px 0px 0px;
-    width: 100%;
-    height: fit-content;
+@media only screen and (max-width: 768px) {
+  div.dataTables_length {
+    text-align: left;
+    float: left;
+    margin-right: 100px;
+  }
+  div.dataTables_filter {
+    text-align: left;
+    float: left;
+    margin-bottom: 5px;
   }
 }
 
